# ros2-pneumatic_actuation

./: README.md
.github/workflows/: main.yml
matlab/: plot_energy_based_mapping.asv  plot_energy_based_mapping.m  plot_piston_system_energy_based.m
matlab/plots/: conservative_force_inextensible_left.fig  (+1 more)
pneumatic_actuation_demos/: package.xml  setup.cfg  setup.py
pneumatic_actuation_demos/launch/: bending_1D_moving_azimuth.launch.py  bep21_bending_1D.launch.py  bep21_bending_1D_moving_azimuth.launch.py  bep21_flower.launch.py  bep21_flower_fast.launch.py  bep21_flower_slow.launch.py  bep21_full_8_shape.launch.py  bep21_full_lemniscate.launch.py  bep21_gbn.launch.py  bep21_half_8_shape.launch.py  bep21_half_lemniscate.launch.py  bep21_rand_setpoints.launch.py  bep21_spiral.launch.py  bep21_star.launch.py  chirp.launch.py  default.launch.py  demo_visit_two_segments.launch.py  demo_waterboard.launch.py  demo_waterboard_setpoint.launch.py  flower.launch.py  gbn.launch.py  pressure_trajectory.launch.py  pressure_trajectory_launch.py  rand_setpoints.launch.py  spiral.launch.py  spiral_const_angular_vel.launch.py  spiral_const_linear_vel.launch.py  spiral_const_period.launch.py  spiral_const_vel.launch.py  staircase.launch.py  star.launch.py
pneumatic_actuation_demos/pneumatic_actuation_demos/: pressure_trajectory_node.py
pneumatic_actuation_matlab/: plot_energy_based_mapping.m
pneumatic_actuation_msgs/: CMakeLists.txt  package.xml
pneumatic_actuation_symbolic_derivation/: derive_jacobian_based_model.py  derive_jacobian_based_planar_model.py
(+5 files in other folders)
