<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pneumatic_actuation_demos</name>
  <version>0.0.0</version>
  <description>Demos for pneumatic actuation of a continuum soft robot arm</description>
  <maintainer email="maximilian@stoelzle.ch">Maximilian Stölzle</maintainer>
  <license>MIT</license>

  <depend>topic_tools</depend>
  <depend>pneumatic_actuation_msgs</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <!-- <exec_depend>pygbn-pip</exec_depend> -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
